--- a/House-of-glass/src/components/Header/Header.module.css
+++ b/House-of-glass/src/components/Header/Header.module.css
@@ -1,17 +1,3 @@
-.glass_nav {
-  grid-area: navbar;
-  width: 100vw;
-  max-width: 100vw;
-  height: 5rem;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  background-color: var(--white);
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 5;
-}
 /* TODO: ADD SEARCH FUNCTIONALITY */
 .glass_search {
   display: none !important;
